--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -23,3 +23,20 @@
         url: https://download.docker.com/linux/ubuntu/gpg
         dest: /etc/apt/keyrings/docker.asc
         mode: a+r
+
+    - name: add docker repository
+      apt_repository:
+        repo: 'deb [arch=amd64 signed-by=/etc/apt/keyrings/myrepo.asc] https://download.example.com/linux/ubuntu {{ ansible_distribution_release }} stable'
+
+    - name: apt update
+      apt:
+        update_cache: yes
+
+    - name: install docker
+      apt:
+        pkg:
+          - docker-ce
+          - docker-ce-cli
+          - containerd.io
+          - docker-buildx-plugin
+          - docker-compose-plugin
