--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -26,11 +26,7 @@
 
     - name: add docker repository
       apt_repository:
-        repo: 'deb [arch=amd64 signed-by=/etc/apt/keyrings/myrepo.asc] https://download.example.com/linux/ubuntu {{ ansible_distribution_release }} stable'
-
-    - name: apt update
-      apt:
-        update_cache: yes
+        repo: 'deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable'
 
     - name: install docker
       apt:
