image source build

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -45,7 +45,7 @@
         name: linux_tweet_app
         build:
           path: /srv/linux_tweet_app
-
+        source: build
 
     - name: run linux_tweet_app
       docker_container:
