--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -72,6 +72,8 @@
 
     - name: create a cert challenge
       acme_certificate:
+        acme_directory: https://acme-staging-v02.api.letsencrypt.org/directory
+        acme_version: 2
         account_key_src: /etc/pki/cert/private/account.key
         account_email: igor.d.melnikov62@gmail.com
         csr: /etc/pki/cert/csr/{{ inventory_hostname }}.csr
