--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -33,3 +33,4 @@ jobs:
             ${{ vars.HOSTNAME }}
           options: |
             --user root
+            --extra-vars key_passphrase = '${{ secrets.ACME_KEY_PASSPHRASE }}
