set account key cipher

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -66,6 +66,7 @@
         path: /etc/pki/cert/private/account.key
         type: Ed25519
         passphrase: '{{ key_passphrase }}'
+        cipher: auto
 
     - name: create a cert challenge
       acme_certificate:
