--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -76,6 +76,7 @@
     - name: create a cert challenge
       acme_certificate:
         acme_directory: https://acme-staging-v02.api.letsencrypt.org/directory
+        terms_agreed: true
         acme_version: 2
         account_key_src: /etc/pki/cert/private/account.key
         account_key_passphrase: '{{ key_passphrase }}'
