--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -33,4 +33,4 @@ jobs:
             ${{ vars.HOSTNAME }}
           options: |
             --user root
-            --extra-vars key_passphrase=${{ secrets.ACME_KEY_PASSPHRASE }}
+            --extra-vars acme_key_passphrase=${{ secrets.ACME_KEY_PASSPHRASE }} csr_key_passphrase=${{ secrets.CSR_KEY_PASSPHRASE }}
