--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -47,20 +47,6 @@
           path: /srv/linux_tweet_app
         source: build
 
-    - name: create token dir
-      file:
-        path: /srv/linux_tweet_app/token
-        state: directory
-        mode: '0755'
-
-    - name: run linux_tweet_app
-      docker_container:
-        pull: never
-        name: linux_tweet_app
-        image: linux_tweet_app
-        ports:
-        - '80:80'
-
     - name: create cert dirs
       file:
         path: '{{ item }}'
@@ -98,5 +84,29 @@
         account_key_passphrase: '{{ acme_key_passphrase }}'
         account_email: igor.d.melnikov62@gmail.com
         csr: /etc/pki/cert/csr/{{ inventory_hostname }}.csr
-        fullchain_dest: /etc/ssl/${{ inventory_hostname }}.crt
+        fullchain_dest: /etc/ssl/{{ inventory_hostname }}.crt
       register: cert_challenge
+
+    - name: create html dir
+      file:
+        path: /srv/linux_tweet_app/html/
+        state: directory
+        mode: '0755'
+
+    - name: copy challenge
+      copy:
+        dest: /srv/linux_tweet_app/html/{{ cert_challenge['challenge_data']['{{ inventory_hostname }}']['http-01']['resource'] }}
+        content: "{{ cert_challenge['challenge_data']['{{ inventory_hostname }}']['http-01']['resource_value'] }}"
+      when: sample_com_challenge is changed and '{{ inventory_hostname }}' in sample_com_challenge['challenge_data']
+
+    - name: run linux_tweet_app
+      docker_container:
+        pull: never
+        name: linux_tweet_app
+        image: linux_tweet_app
+        ports:
+        - '80:80'
+        mounts:
+          - type: bind
+            source: /srv/linux_tweet_app/html/
+            target: /usr/share/nginx/html/
