Fix module name

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -123,7 +123,8 @@
             target: /usr/share/nginx/html/
 
     - name: let challenge be validated
-      account_key_src: /etc/pki/cert/private/account.key
+      acme_certificate:
+        account_key_src: /etc/pki/cert/private/account.key
         csr: /etc/pki/cert/csr/{{ inventory_hostname }}.csr
         fullchain_dest: /etc/ssl/{{ inventory_hostname }}.crt
         data: "{{ cert_challenge }}"
