--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -124,6 +124,8 @@
 
     - name: let challenge be validated
       acme_certificate:
+        acme_directory: https://acme-staging-v02.api.letsencrypt.org/directory
+        acme_version: 2
         account_key_src: /etc/pki/cert/private/account.key
         csr: /etc/pki/cert/csr/{{ inventory_hostname }}.csr
         fullchain_dest: /etc/ssl/{{ inventory_hostname }}.crt
