--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -3,10 +3,6 @@
   hosts: all
   tasks:
 
-    - name: install jmespath
-      pip:
-        name: jmespath
-
     - name: get package facts
       package_facts:
 
@@ -20,6 +16,7 @@
         pkg:
         - ca-certificates
         - curl
+        - python3-jmespath
 
     - name: create keyring dir
       file:
