--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -5,7 +5,7 @@
 
     - name: install jmespath
       apt:
-        name: jmespath
+        name: python3-jmespath
 
     - name: get package facts
       package_facts:
