--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -27,6 +27,8 @@ jobs:
         with:
           playbook: main.yml
           directory: ansible
+          configuration: |
+            ansible_python_interpreter = /usr/bin/python3
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           inventory: |
             [all]
