--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -3,10 +3,6 @@
   hosts: all
   tasks:
 
-    - name: install jmespath
-      apt:
-        name: python3-jmespath
-
     - name: get package facts
       package_facts:
 
@@ -77,12 +73,19 @@
         passphrase: '{{ csr_key_passphrase }}'
         cipher: auto
 
+    - name: list of dns names
+      set_fact:
+        hostname:
+        - '{{ inventory_hostname }}'
+        - www.{{ inventory_hostname }}
+
     - name: create csr
       openssl_csr:
         path: /etc/pki/cert/csr/{{ inventory_hostname }}.csr
         privatekey_path: /etc/pki/cert/private/${{ inventory_hostname}}.pem
         privatekey_passphrase: '{{ csr_key_passphrase }}'
-        subject_alt_name: 'DNS:{{ inventory_hostname }},DNS:www.{{ inventory_hostname }}'
+        subject_alt_name: '{{ item | map('regex_replace', '^', 'DNS:') | list }}'
+      loop: hostname
 
     - name: generate account key
       openssl_privatekey:
