--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -84,7 +84,7 @@
         path: /etc/pki/cert/csr/{{ inventory_hostname }}.csr
         privatekey_path: /etc/pki/cert/private/${{ inventory_hostname}}.pem
         privatekey_passphrase: '{{ csr_key_passphrase }}'
-        subject_alt_name: '{{ item | map('regex_replace', '^', 'DNS:') | list }}'
+        subject_alt_name: "{{ item | map('regex_replace', '^', 'DNS:') | list }}"
       loop: hostname
 
     - name: generate account key
