--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -81,8 +81,7 @@
 
     - name: print alt names
       debug:
-        var: "{{ item | map('regex_replace', '^', 'DNS:') | list }}"
-      with_list: '{{ hostname }}'
+        var: "{{ hostname | map('regex_replace', '^', 'DNS:') | list }}"
 
     - name: create csr
       openssl_csr:
