Fix debug output

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -81,7 +81,7 @@
 
     - name: print alt names
       debug:
-        var: "{{ hostname | map('regex_replace', '^', 'DNS:') | list }}"
+        msg: "{{ hostname | map('regex_replace', '^', 'DNS:') | list }}"
 
     - name: create csr
       openssl_csr:
