--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -58,18 +58,15 @@
           path: /srv/linux_tweet_app
         source: build
 
-    - name: create cert dirs
+    - name: create csr dir
       file:
-        path: '{{ item }}'
+        path: /etc/pki/cert/csr/
         state: directory
         mode: '0600'
-      loop:
-        - /etc/pki/cert/private/
-        - /etc/pki/cert/csr/
 
-    - name: generate csr key
+    - name: generate cert key
       openssl_privatekey:
-        path: /etc/pki/cert/private/${{ inventory_hostname}}.pem
+        path: /etc/ssl/private/${{ inventory_hostname}}.key
         passphrase: '{{ csr_key_passphrase }}'
         cipher: auto
 
@@ -82,13 +79,13 @@
     - name: create csr
       openssl_csr:
         path: /etc/pki/cert/csr/{{ inventory_hostname }}.csr
-        privatekey_path: /etc/pki/cert/private/${{ inventory_hostname}}.pem
+        privatekey_path: /etc/ssl/private/${{ inventory_hostname}}.key
         privatekey_passphrase: '{{ csr_key_passphrase }}'
         subject_alt_name: "{{ hostname | map('regex_replace', '^', 'DNS:') | list }}"
 
     - name: generate account key
       openssl_privatekey:
-        path: /etc/pki/cert/private/account.key
+        path: /etc/ssl/private/account.key
         passphrase: '{{ acme_key_passphrase }}'
         cipher: auto
 
@@ -97,7 +94,7 @@
         acme_directory: https://acme-staging-v02.api.letsencrypt.org/directory
         terms_agreed: true
         acme_version: 2
-        account_key_src: /etc/pki/cert/private/account.key
+        account_key_src: /etc/ssl/private/account.key
         account_key_passphrase: '{{ acme_key_passphrase }}'
         account_email: igor.d.melnikov62@gmail.com
         csr: /etc/pki/cert/csr/{{ inventory_hostname }}.csr
@@ -134,7 +131,7 @@
       acme_certificate:
         acme_directory: https://acme-staging-v02.api.letsencrypt.org/directory
         acme_version: 2
-        account_key_src: /etc/pki/cert/private/account.key
+        account_key_src: /etc/ssl/private/account.key
         account_key_passphrase: '{{ acme_key_passphrase }}'
         csr: /etc/pki/cert/csr/{{ inventory_hostname }}.csr
         fullchain_dest: /etc/ssl/{{ inventory_hostname }}.crt
