--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -152,5 +152,5 @@
         - '80:80'
         - '443:443'
         mounts:
-            source: /srv/linux_tweet_app/nginx.conf
+          - source: /srv/linux_tweet_app/nginx.conf
             target: /etc/nginx/conf.d/default.conf
