--- a/ansible/nginx.conf
+++ b/ansible/nginx.conf
@@ -44,13 +44,13 @@ http {
 		server_name _;
 		return 301 https://$host$request_uri;
 	}
-	
+
     server {
 	    listen 443 ssl;
 
         server_name fozzey.ru;
         ssl_certificate /etc/ssl/imelnikov.xyz.crt;
-        ssl_certificate_key /etc/ssl/private/imelnikov.xyz.key;
+        ssl_certificate_key /etc/ssl/imelnikov.xyz.key;
         location / {
 		    root /var/www/html;
 	    }
