Fix resource dir

--- a/ansible/nginx.conf
+++ b/ansible/nginx.conf
@@ -52,7 +52,7 @@ http {
         ssl_certificate /etc/ssl/imelnikov.xyz.crt;
         ssl_certificate_key /etc/ssl/imelnikov.xyz.key;
         location / {
-		    root /var/www/html;
+		    root /usr/share/nginx/html;
 	    }
     }
 }
