--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -11,6 +11,9 @@ on:
     paths:
       - ansible/**
       - .github/workflows/ansible.yml
+  workflow_run:
+    workflows: ['Terraform']
+    types: [completed]
 
 jobs:
   ansible:
