--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -91,7 +91,7 @@
 
     - name: Create cert challenge
       acme_certificate:
-        acme_directory: https://acme-staging-v02.api.letsencrypt.org/directory
+        acme_directory: https://acme-v02.api.letsencrypt.org/directory
         terms_agreed: true
         acme_version: 2
         account_key_src: /srv/linux_tweet_app/csr/acme_account.key
@@ -131,7 +131,7 @@
 
     - name: Let challenge be validated
       acme_certificate:
-        acme_directory: https://acme-staging-v02.api.letsencrypt.org/directory
+        acme_directory: https://acme-v02.api.letsencrypt.org/directory
         acme_version: 2
         account_key_src: /srv/linux_tweet_app/csr/acme_account.key
         account_key_passphrase: '{{ acme_key_passphrase }}'
