--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -34,4 +34,4 @@ jobs:
             ${{ vars.HOSTNAME }}
           options: |
             --user root
-            -e "acme_key_passphrase=${{ secrets.ACME_KEY_PASSPHRASE }} csr_key_passphrase=${{ secrets.CSR_KEY_PASSPHRASE }}"
+            -e acme_key_passphrase=${{ secrets.ACME_KEY_PASSPHRASE }}
